--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -35,7 +35,7 @@
         content: "";
         position: absolute;
         height: 75vh;
-        background-image: url("../../../../bg-intro-desktop.svg");
+        background-image: url("../../../images/bg-intro-desktop.svg");
         background-repeat: no-repeat;
         background-position: center 80%;
         width: 160%;
@@ -48,7 +48,7 @@
       position: absolute;
       width: 100%;
       height: 100%;
-      background-image: url("../../../../image-mockups.png");
+      background-image: url("../../../images/image-mockups.png");
       background-size: 93%;
       background-repeat: no-repeat;
       background-position: center bottom;
