Fixed font size

--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -222,7 +222,7 @@ button,
   font-weight: 400;
   display: inline-block;
   color: $white;
-  font-size: $font-md;
+  font-size: 1rem;
   transition: opacity 250ms ease-in-out;
   overflow: hidden;
 
